--- a/sass/day_menu.scss
+++ b/sass/day_menu.scss
@@ -165,7 +165,7 @@ Main Components
 }
 
 .menu-section:nth-of-type(2) .half-container:first-of-type {
-    background-image: url("../img/daymenu/img-1.jpg");
+    background-image: url("../img/daymenu/app.jpg");
     background-size: cover;
 }
 
